# google-news-extension

./: .gitignore  README.md  package-lock.json
backend/: README.md  package-lock.json  package.json  tsconfig.json
backend/config/: custom-environment-variables.js  default.js  development.js  production.js  test.js
backend/data/: accounts-3.json  good_accounts.json
backend/src/: config.ts  index.ts  scorer.py  server.ts
backend/src/middleware/: multer.ts
backend_py/: pyproject.toml
backend_py/src/: db.py  main.py
backend_py/src/api/: validate.py
client/: .gitignore  README.md  package-lock.json  package.json
client/src/: config.js  manifest.js  manifest.ts  utils.js
client_legacy/: manifest.json  unused_func.js
client_legacy/src/: background.js  content.js
docs/: CNAME  _config.yml  index.md
frontend/: manifest.json  package-lock.json  package.json
frontend/src/: background.js  content.js
tmp_website/: GoogleNewsLogin.html  initial.html  plugin.html
tmp_website/css/: style.css
tmp_website/js/: googlenewslogin.js  plugin.js
vpn/: package-lock.json  package.json
website/: GoogleNewsLogin.html  GoogleNewsLoginPage.html  PluginDownloadPage.html  PreSurveyCompletion.html  Procedure.html  ProlificLoginPage.html  SurveyPage.html  end.html  index.html  plugin.html  template.html
website/css/: plugin.css  procedue.css  style.css  surveypage.css
website/js/: SurveyPage.js  end.js  googlenewslogin.js  index.js  login.js  plugin.js  prolificlogin.js
website/legacy/: PreSurveyCompletion.html
website_next/: package-lock.json  package.json
(+41 files in other folders)
