[tool.poetry]
name = "backend-py"
version = "0.1.0"
description = ""
authors = ["nociza <azicon@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = {version = "^4.6.1", extras = ["srv"]}
flask = "^3.0.1"
flask-pymongo = "^2.3.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
